--- a/assets/css/section-cardCash.css
+++ b/assets/css/section-cardCash.css
@@ -35,6 +35,7 @@
     display: flex;
     flex-direction: row;
     margin-top: 2.5em;
+    margin-bottom: 2.5em;
     .main-header{
         width: calc(100%/5);
     }
